--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,7 @@
 }
 
 html, body, #root {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
+  @apply m-0 p-0 min-w-[100vw] min-h-[100vh] bg-primary-canvas dark:bg-primary-canvas-dark;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
