--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,10 @@
 }
 
 html, body, #root {
-  @apply m-0 p-0 min-w-[100vw] min-h-[100vh] bg-primary-canvas dark:bg-primary-canvas-dark;
+  @apply m-0 p-0 min-w-[100vw] bg-primary-canvas dark:bg-primary-canvas-dark;
+  min-height: 100vh; /* Fallback */
+  min-height: calc(var(--vh, 1vh) * 100);
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
