--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,7 @@
 }
 
 html, body, #root {
-  @apply m-0 p-0 min-w-[100vw] bg-primary-canvas dark:bg-primary-canvas-dark;
-  min-height: 100vh; /* Fallback */
-  min-height: calc(var(--vh, 1vh) * 100);
+  @apply m-0 p-0 size-0 min-h-[100dvh] max-h-[100dvh] min-w-[100vw] max-w-[100vw] bg-primary-canvas dark:bg-primary-canvas-dark;
 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
